--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ cmake_minimum_required(VERSION 3.3.2)
 
 include(cmake/App.cmake)
 
-set(SOURCES "src/MyApp.h"
-            "src/TempCleaner.h"
-            "src/TempFolder.cpp"
+set(SOURCES "src/includes/MyApp.h"
+            "src/includes/TempCleaner.h"
+            "src/enums/TempFolder.cpp"
             "src/MyApp.cpp"
             "src/TempCleaner.cpp"
             "src/main.cpp")
